--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@picocss/pico": "^2.1.1",
     "vue": "^3.5.13"
   },
   "devDependencies": {
